--- a/templates/app/views/ejs/site/index.html
+++ b/templates/app/views/ejs/site/index.html
@@ -1,11 +1,8 @@
-<%
-cs.js('$(".carousel").carousel({interval: 3500});');
-%>
 <section id="home">
     <div class="container">
     	<div class="row centered">
     		<div class="col-lg-12">
-				<h1>Welcome To <b><%=cs.title%></b></h1>
+				<h1>Welcome To <b><%=title%></b></h1>
 				<h3>Show your product with this handsome theme.</h3>
 				<br>
     		</div>
