--- a/templates/app/configs/routes.ejs
+++ b/templates/app/configs/routes.ejs
@@ -1,32 +1,63 @@
+"use strict";
 //https://github.com/alexmingoia/koa-router
-var Router= require('koa-router');
+var Router= require('koa-router')
 var secured = function *(next) {
     if (this.isAuthenticated()) {
-        yield next;
+        yield next
     } else {
-        this.status = 401;
+        this.status = 401
     }
 }
 
-module.exports=function(passport){
+module.exports=function(app, passport){
     var router= new Router();
     ///// Site
-    var site=require('../controllers/site');
+    var siteController=require('../controllers/site')
+    var authController=require('../controllers/auth')
     
-    //pages
-    router.get('/',site.index);
+    //main
+    router.get('/',siteController.index)
     //contact
-    router.post('/contact', site.doContact);
+    router.post('/contact', siteController.doContact)
+    
+    <% if(program.auth){ -%>
+    //register
+    router.get('/register', authController.register)
+    router.post('/register', authController.doRegister)
     
     //auth
-    router.get('/login', site.login);
-    router.post('/login', site.doLogin);
-    router.all('/logout', site.logout);
+    router.get('/login', authController.login)
+    router.post('/login', authController.doLogin)
+    router.all('/logout', authController.logout)
     
-    //register
-    router.get('/register', site.register);
-    router.post('/register', site.doRegister);
-    
-    ///// User
-    var user=require('../controllers/auth');
+    <% if(program.auth.facebook){ -%>
+    router.get('/auth/facebook',passport.authenticate('facebook'))
+    router.get('/auth/facebook/callback', 
+        passport.authenticate('facebook', { failureRedirect: '/login?error=facebook' }),
+        authController.authSuccess
+    )
+    <% } -%>
+    <% if(program.auth.google){ -%>
+    router.get('/auth/google',passport.authenticate('google'))
+    router.get('/auth/google/callback', 
+        passport.authenticate('google', { failureRedirect: '/login?error=google' }),
+        authController.authSuccess
+    )
+    <% } -%>
+    <% if(program.auth.github){ -%>
+    router.get('/auth/github',passport.authenticate('github'))
+    router.get('/auth/github/callback', 
+        passport.authenticate('github', { failureRedirect: '/login?error=github' }),
+        authController.authSuccess
+    )
+    <% } -%>
+    <% if(program.auth.bitbucket){ -%>
+    router.get('/auth/bitbucket',passport.authenticate('bitbucket'))
+    router.get('/auth/bitbucket/callback', 
+        passport.authenticate('bitbucket', { failureRedirect: '/login?error=bitbucket' }),
+        authController.authSuccess
+    )
+    <% } -%>
+    <% } -%>
+    return router.middleware();
 }
