--- a/templates/app/package.ejs
+++ b/templates/app/package.ejs
@@ -1,50 +1,57 @@
 {
     "name": "<%=name%>",
     "version": "0.0.1",
-    "private": "true",
+    "private": true,
     "description": "Generated with koa-mvc",
     "dependencies": {
-        "koa": "^0.7.0",
-        "koa-bodyparser": "*",
-        "koa-static": "^1.4.5",
-        "koa-router": "^3.1.4",
-<% if(program.session){ %>
-        "koa-generic-session": "^1.0.0",
-        "koa-flash": "^0.0.3",
-<% }%>
-<% if(program.view==='ejs'){%>
-        "koa-ejs": "^1.0.1",
-        "koa-error-ejs": "^1.0.1",
-<% } else if(program.view==='swig'){%>
-        "koa-swig": "*",
-        "koa-error": "*",
-<% }%>
-<% if(program.i18n){%>
-        "koa-i18n": "^0.1.4",
-        "koa-locale": "^0.1.1",
-<% }%>
-<% if(program.css==='less'){%>
-        "koa-less": "0",
-<% }%>
-<% } else if(program.css==='stylus'){%>
-        "koa-stylus": "0",
-<% }%>
-<% if(program.auth.facebook){%>
-        "passport-facebook": "*",
-<% }%>
-<% if(program.auth.google){%>
-        "passport-google": "*",
-<% }%>
-<% if(program.auth.github){%>
-        "passport-github": "*",
-<% }%>
-        "waterline": "*",
-        "sails-<%=program.db%>": "*"
+        "co": "3.x.x",
+        "koa": "0.x.x",
+        "koa-bodyparser": "1.x.x",
+        "koa-static": "1.x.x",
+        "koa-router": "3.x.x",
+<% if(program.session){ -%>
+        "koa-generic-session": "1.x.x",
+        "koa-flash": "0.0.x",
+<% } -%>
+<% if(program.template==='ejs'){ -%>
+        "koa-ejs": "1.x.x",
+        "koa-error-ejs": "0.0.x",
+<% } else if(program.template==='swig'){ -%>
+        "koa-swig": "0.x.x",
+        "koa-error": "1.x.x",
+<% } -%>
+<% if(program.i18n){ -%>
+        "koa-i18n": "0.x.x",
+        "koa-locale": "0.x.x",
+<% } -%>
+<% if(program.css==='less'){ -%>
+        "koa-less": "0.0.x",
+<% } else if(program.css==='stylus'){ -%>
+        "koa-stylus": "0.0.x",
+<% } -%>
+<% if(program.auth){ -%>
+        "koa-passport": "0.x.x",
+<% if(program.auth.facebook){ -%>
+        "passport-facebook": "1.x.x",
+<% } -%>
+<% if(program.auth.google){ -%>
+        "passport-google": "0.x.x",
+<% } -%>
+<% if(program.auth.github){ -%>
+        "passport-github": "0.x.x",
+<% } -%>
+<% if(program.auth.bitbucket){ -%>
+        "passport-bitbucket": "0.x.x",
+<% } -%>
+<% } -%>
+        "waterline": "0.10.*",
+        "sails-<%=program.db%>": "0.10.*",
+        "bcrypt": "rvagg/node.bcrypt.js#nan"
     },
     "devDependencies": {
     },
     "engines": {
-        "node": ">= 11"
+        "node": ">= 0.11.9"
     },
     "scripts": {
         "start": "node ./bin/www",
