--- a/templates/app/views/ejs/layouts/error.html
+++ b/templates/app/views/ejs/layouts/error.html
@@ -2,8 +2,8 @@
 <html lang="en">
     <head>
         <meta charset='utf-8'>
-        <title><%cs.title || status + ' - Error'%></title>
-        <meta name="description" content="<%cs.description || status + ' - Error page'%>">
+        <title><%=(status + ' Error')+ ' - ' + title%></title>
+        <meta name="description" content="<%=(status + ' - Error page')%>">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link type="text/css" href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css" rel="stylesheet"/>
         <link type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet"/>
@@ -17,7 +17,7 @@
             <!--page content-->
             <%- body %>
         </div>
-            <script src="//code.jquery.com/jquery-2.1.1.min.js"></script>
-            <script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.1.1/js/bootstrap.min.js"></script>
+        <script src="//code.jquery.com/jquery-2.1.1.min.js"></script>
+        <script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.1.1/js/bootstrap.min.js"></script>
     </body>
 </html>
